--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-sanitize": "1.2.16",
     "angular-animate": "1.2.16",
     "angular-touch": "1.2.16",
-    "angular-route": "1.2.16"
+    "angular-route": "1.2.16",
+    "flat-ui": "2.2.2",
+    "angular-sails":"1.1.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
