--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-touch": "1.2.16",
     "angular-route": "1.2.16",
     "flat-ui": "2.2.2",
-    "angular-sails": "1.1.2"
+    "angular-sails": "1.1.2",
+    "semantic-ui-flag": "1.11.6"
+
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
