--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,8 @@
     "angular-touch": "1.2.16",
     "flat-ui": "2.2.2",
     "semantic-ui-flag": "1.11.6",
-    "angular-ui-router": "0.2.13"
-
-
+    "angular-ui-router": "0.2.13",
+    "eeh-navigation": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
