--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,15 @@
     "angular-touch": "1.2.16",
     "flat-ui": "2.2.2",
     "semantic-ui-flag": "1.11.6",
-    "angular-ui-router": "0.2.13"
+    "angular-ui-router": "0.2.13",
+    "angular-deckgrid": "~0.5.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
     "angular-scenario": "1.2.16"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "angular": "1.2.16"
+  }
 }
