--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^0.2.1",
@@ -22,6 +21,7 @@
     "grunt-karma": "^0.10.1",
     "grunt-newer": "^0.7.0",
     "grunt-ngmin": "^0.0.3",
+    "grunt-recess": "^1.0.1",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
