--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-ui-router": "0.2.13",
     "angular-motion": "~0.3.4",
     "angular-strap": "~2.2.1",
-    "bootstrap-switch": "*"
+    "bootstrap-switch": "*",
+    "bootstrap-tagsinput": "~0.4.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
