--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-motion": "~0.3.4",
     "angular-strap": "~2.2.1",
     "bootstrap-switch": "*",
-    "bootstrap-tagsinput": "~0.4.2"
+    "bootstrap-tagsinput": "~0.4.2",
+    "angular-masonry": "~0.13.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
