--- a/bower.json
+++ b/bower.json
@@ -2,26 +2,41 @@
   "name": "yosl",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.16",
+    "angular": "1.3.15",
+    "jquery": "~2.1.4",
+    "jquery-bridget": "~1.1.0",
+    "get-size": "~1.2.2",
+    "get-style-property": "~1.0.4",
+    "eventie": "~1.0.6",
+    "doc-ready": "~1.0.4",
+    "eventEmitter": "~4.3.0",
+    "matches-selector": "~1.0.3",
+    "fizzy-ui-utils": "~1.0.1",
+    "outlayer": "~1.4.2",
+    "masonry": "3.3.2",
+    "imagesloaded": "3.1.7",
+    "angular-masonry": "~0.13.0",
+    "angular-resource": "1.3.15",
+    "angular-ui-router": "0.2.13",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
     "bootstrap": "~3.1.1",
-    "angular-resource": "1.2.16",
-    "angular-cookies": "1.2.16",
-    "angular-sanitize": "1.2.16",
-    "angular-animate": "1.2.16",
-    "angular-touch": "1.2.16",
+    "angular-cookies": "1.3.15",
+    "angular-sanitize": "1.3.15",
+    "angular-animate": "1.3.15",
+    "angular-touch": "1.3.15",
     "semantic-ui-flag": "1.11.6",
-    "angular-ui-router": "0.2.13",
     "angular-motion": "~0.3.4",
     "angular-strap": "~2.2.1",
     "bootstrap-switch": "*",
     "bootstrap-tagsinput": "~0.4.2",
-    "angular-masonry": "~0.13.0"
+    "angular-environment": "~1.0.3",
+    "angular-isotope": "~0.1.14"
+
   },
   "devDependencies": {
-    "angular-mocks": "1.2.16",
-    "angular-scenario": "1.2.16"
+    "angular-mocks": "1.3.15",
+    "angular-scenario": "1.3.15"
   },
   "appPath": "app",
   "resolutions": {
