--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,10 @@
     "angular": "1.3.15",
     "jquery": "~2.1.4",
     "jquery-bridget": "~1.1.0",
+    "outlayer": "~1.4.2",
+    "masonry": "3.3.2",
+    "imagesloaded": "3.1.7",
+    "angular-masonry": "~0.13.0",
     "get-size": "~1.2.2",
     "get-style-property": "~1.0.4",
     "eventie": "~1.0.6",
@@ -12,10 +16,6 @@
     "eventEmitter": "~4.3.0",
     "matches-selector": "~1.0.3",
     "fizzy-ui-utils": "~1.0.1",
-    "outlayer": "~1.4.2",
-    "masonry": "3.3.2",
-    "imagesloaded": "3.1.7",
-    "angular-masonry": "~0.13.0",
     "angular-resource": "1.3.15",
     "angular-ui-router": "0.2.13",
     "json3": "~3.3.1",
@@ -31,8 +31,16 @@
     "bootstrap-switch": "*",
     "bootstrap-tagsinput": "~0.4.2",
     "angular-environment": "~1.0.3",
-    "angular-isotope": "~0.1.14"
-
+    "angular-isotope": "~0.1.14",
+    "ng-dialog": "~0.5.5"
+  },
+  "overrides": {
+    "outlayer": {
+      "main": [
+        "item.js",
+        "outlayer.js"
+      ]
+    }
   },
   "devDependencies": {
     "angular-mocks": "1.3.15",
