--- a/bower.json
+++ b/bower.json
@@ -2,20 +2,19 @@
   "name": "yosl",
   "version": "0.0.0",
   "dependencies": {
+    "angular": "1.3.15",
     "jquery": "~2.1.4",
     "jquery-bridget": "~1.1.0",
-    "angular": "1.3.15",
-    "outlayer": "~1.4.2",
+    "get-size": "~1.2.2",
+    "eventEmitter": "~4.3.0",
+    "eventie": "~1.0.6",
+    "doc-ready": "~1.0.4",
+    "matches-selector": "~1.0.3",
+    "fizzy-ui-utils": "~1.0.1",
     "masonry": "3.3.2",
     "imagesloaded": "3.1.7",
     "angular-masonry": "~0.13.0",
-    "get-size": "~1.2.2",
     "get-style-property": "~1.0.4",
-    "eventie": "~1.0.6",
-    "doc-ready": "~1.0.4",
-    "eventEmitter": "~4.3.0",
-    "matches-selector": "~1.0.3",
-    "fizzy-ui-utils": "~1.0.1",
     "angular-resource": "1.3.15",
     "angular-ui-router": "0.2.13",
     "json3": "~3.3.1",
@@ -31,7 +30,9 @@
     "bootstrap-switch": "*",
     "bootstrap-tagsinput": "~0.4.2",
     "angular-environment": "~1.0.3",
-    "ng-dialog": "~0.5.5"
+    "ng-dialog": "~0.5.5",
+    "font-awesome": "~4.4.0",
+    "ngInfiniteScroll": "~1.2.1"
   },
   "overrides": {
     "outlayer": {
